feat(db): setup auth migration and connecting database

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "turbo run build",
     "test": "turbo run test",
     "lint": "turbo run lint",
-    "format": "turbo run format"
+    "format": "turbo run format",
+    "db:migrate": "turbo run db:migrate -- ",
+    "db:generate": "turbo run db:generate -- "
   },
   "keywords": [],
   "author": "",
