--- a/apps/server/.prettierrc
+++ b/apps/server/.prettierrc
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "endOfLine": "lf"
 }
