--- a/apps/web/.prettierrc
+++ b/apps/web/.prettierrc
@@ -2,5 +2,6 @@
   "$schema": "https://json.schemastore.org/prettierrc",
   "plugins": [
     "prettier-plugin-tailwindcss"
-  ]
+  ],
+  "endOfLine": "lf"
 }
