--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --max-warnings 0 --fix"
   },
   "dependencies": {
+    "@radix-ui/themes": "^2.0.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
