--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,20 +9,22 @@
     "lint": "eslint . --max-warnings 0 --fix"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "nextjs-toploader": "^1.6.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@halostemba/eslint-config": "workspace:*",
     "@halostemba/ts-config": "workspace:*",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "prettier-plugin-tailwindcss": "^0.5.10",
-    "tailwindcss": "^3.3.0"
+    "@types/node": "^20.10.7",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1"
   }
 }
