--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,11 +23,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "date-fns": "^3.0.6",
     "handlebars": "^4.7.8",
+    "nanoid": "^3.0.0",
     "nodemailer": "^6.9.8",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
