--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,20 @@
     "lint": "eslint . --max-warnings 0 --fix"
   },
   "dependencies": {
+    "@halostemba/entities": "workspace:*",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
+    "@tanstack/react-query": "^5.17.9",
+    "axios": "^1.6.5",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "nextjs-toploader": "^1.6.4",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@halostemba/eslint-config": "workspace:*",
