--- a/apps/cdn/package.json
+++ b/apps/cdn/package.json
@@ -10,13 +10,22 @@
     "build:watch": "tsc -w --preserveWatchOutput"
   },
   "dependencies": {
+    "@flystorage/file-storage": "^0.1.0",
+    "@flystorage/local-fs": "^0.1.0",
     "@halostemba/eslint-config": "workspace:*",
     "@halostemba/ts-config": "workspace:*",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
+    "nanoid": "3.2",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.4",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.8",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
