--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/themes": "^2.0.3",
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
+    "clsx": "^2.1.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "nextjs-toploader": "^1.6.4",
@@ -22,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@halostemba/eslint-config": "workspace:*",
