--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,10 +27,12 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "clean-text-utils": "^1.1.17",
     "date-fns": "^3.0.6",
     "handlebars": "^4.7.8",
     "nanoid": "^3.0.0",
     "nodemailer": "^6.9.8",
+    "openai": "^4.24.7",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
