--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
@@ -30,7 +31,7 @@
     "clean-text-utils": "^1.1.17",
     "date-fns": "^3.0.6",
     "handlebars": "^4.7.8",
-    "nanoid": "^3.0.0",
+    "nanoid": "^3.1.31",
     "nodemailer": "^6.9.8",
     "openai": "^4.24.7",
     "passport-jwt": "^4.0.1",
