--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-intersection-observer": "^9.5.3",
     "react-otp-input": "^3.1.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
