--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
+    "date-fns": "^3.0.6",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "nextjs-toploader": "^1.6.4",
