--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
+    "date-fns": "^3.0.6",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "nextjs-toploader": "^1.6.4",
@@ -23,7 +24,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-intersection-observer": "^9.5.3",
     "react-otp-input": "^3.1.1",
+    "react-textarea-autosize": "^8.5.3",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
