--- a/apps/cdn/package.json
+++ b/apps/cdn/package.json
@@ -15,21 +15,21 @@
     "@halostemba/eslint-config": "workspace:*",
     "@halostemba/ts-config": "workspace:*",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
-    "nanoid": "3.2",
-    "sharp": "^0.33.1"
+    "nanoid": "~3.2.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.4.4",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.8",
+    "@types/node": "^20.11.5",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.0.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   }
