--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,25 +17,25 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.10.3",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.3.0",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.0",
     "@nestjs/throttler": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-validator": "^0.14.1",
     "clean-text-utils": "^1.1.17",
-    "date-fns": "^3.0.6",
+    "date-fns": "^3.3.0",
     "handlebars": "^4.7.8",
-    "nanoid": "^3.1.31",
+    "nanoid": "^3.3.7",
     "nodemailer": "^6.9.8",
-    "openai": "^4.24.7",
+    "openai": "^4.25.0",
     "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -43,23 +43,23 @@
     "@halostemba/entities": "workspace:*",
     "@halostemba/eslint-config": "workspace:*",
     "@halostemba/ts-config": "workspace:*",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
     "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^4.0.0",
-    "@types/supertest": "^2.0.12",
-    "eslint": "^8.42.0",
-    "jest": "^29.5.0",
+    "@types/supertest": "^2.0.16",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0"
   },
   "jest": {
