--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --max-warnings 0 --fix"
@@ -13,10 +13,10 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
-    "@tanstack/react-query": "^5.17.9",
+    "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
-    "date-fns": "^3.0.6",
+    "date-fns": "^3.3.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "notistack": "^3.0.1",
@@ -27,15 +27,15 @@
     "react-otp-input": "^3.1.1",
     "react-textarea-autosize": "^8.5.3",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@halostemba/eslint-config": "workspace:*",
     "@halostemba/ts-config": "workspace:*",
-    "@types/node": "^20.10.7",
-    "@types/react": "^18.2.47",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1"
