--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-otp-input": "^3.1.1",
     "react-textarea-autosize": "^8.5.3",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
