--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.49.3",
     "react-intersection-observer": "^9.5.3",
     "react-otp-input": "^3.1.1",
+    "react-spinners": "^0.13.8",
     "react-textarea-autosize": "^8.5.3",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
