--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@types/node": "^20.11.13",
     "prisma": "^5.8.1",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
