--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "react-otp-input": "^3.1.1",
     "react-spinners": "^0.13.8",
     "react-textarea-autosize": "^8.5.3",
+    "react-timer-hook": "^3.0.7",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
