--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@halostemba/entities": "workspace:*",
+    "@headlessui/react": "^1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
     "@tanstack/react-query": "^5.17.19",
+    "@tremor/react": "^3.14.0",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.0",
