feat: create logging system for server and implement it

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,5 +1,10 @@
+NODE_ENV=development
+
 APP_URL=http://localhost:5001
 FRONTEND_URL=http://localhost:3000
+
+LOG_LEVEL=silly
+LOG_PROD_LOCATION=logs
 
 MAIL_HOST=
 MAIL_PORT=
