--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -37,11 +37,14 @@
     "date-fns": "^3.3.1",
     "handlebars": "^4.7.8",
     "nanoid": "^3.3.7",
+    "nest-winston": "^1.9.4",
     "nodemailer": "^6.9.10",
     "openai": "^4.28.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@halostemba/eslint-config": "workspace:*",
