--- a/docker/database/docker-compose.yml
+++ b/docker/database/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '3.8'
 services:
   db:
+    env_file:
+      - path: .env
+        required: true
     container_name: halostemba_db
     image: postgres:${POSTGRES_VERSION:-latest}
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-halostemba}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-h4l0st3mb4}
       POSTGRES_DB: ${POSTGRES_DB:-halostemba}
-    env_file:
-      - path: .env
-        required: true
     ports:
-      - '5432:${BIND_PORT:-5432}'
+      - '${BIND_PORT:-5432}:5432'
     volumes:
-      - ./data:/var/lib/postgresql/data:ro
+      - ./data:/var/lib/postgresql/data
     network_mode: bridge
     deploy:
       resources:
