--- a/packages/transactional/package.json
+++ b/packages/transactional/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.14",
+    "react": "^18.2.0",
     "react-email": "1.10.1"
   },
   "devDependencies": {
