--- a/packages/transactional/package.json
+++ b/packages/transactional/package.json
@@ -15,6 +15,7 @@
     "react-email": "1.10.1"
   },
   "devDependencies": {
+    "@types/react": "^18.2.61",
     "concurrently": "^8.2.2",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
