--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.50.1",
     "react-intersection-observer": "^9.8.1",
     "react-otp-input": "^3.1.1",
+    "react-player": "^2.15.1",
     "react-spinners": "^0.13.8",
     "react-textarea-autosize": "^8.5.3",
     "react-timer-hook": "^3.0.7",
